src/css/main.css
/* ... */
.btn:hover, .btn:focus, .visually-hidden:focus + .btn {
	background: #cfcfcf;
	background: linear-gradient(to bottom,  #f2f2f2,  #b2b2b2);
	border-color: #606060;
    color: #222222;
    text-decoration: none;
}
.visually-hidden:checked + .btn,
.visually-hidden:checked + .btn:hover {
    cursor: pointer;
	background: #FFF;
	border: 1px solid #CCCCCC;
	color: #000000;
	text-shadow: none;
	box-shadow: 0 1px 2px rgba(0,0,0,.1);
}
.visually-hidden:checked + .btn:hover {
	border-color: #606060;
}
.btn:active,
.visually-hidden[type=checkbox]:checked + .btn:active {
	background: linear-gradient(to bottom,  #bfbfbf,  #f2f2f2);
}
.visually-hidden[type=radio]:checked + .btn,
.visually-hidden[type=radio]:checked + .btn:hover {
	border-color: #CCCCCC;
	cursor: default;
}

.modeSelection .btn {
    min-height: 2.5em;
    vertical-align: middle;
}

select {
	cursor: pointer;
	text-align: left;
	text-decoration: none;
	border-radius: 5px;
	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,.2), inset 0 -1px 2px rgba(255,255,255,1);
	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.2), inset 0 -1px 2px rgba(255,255,255,1);
	box-shadow: 0 1px 2px rgba(0,0,0,.2), inset 0 -1px 2px rgba(255,255,255,1);
	border-radius: 5px;
	font-family: Verdana, Helvetica, Arial, sans-serif;
	display: inline-block;

	/* default colors */
	color: #222222;
	text-shadow: 0 1px 0 white;
	border: 1px solid #AAAAAA;
	background: #fff;
	background: linear-gradient(to bottom,  #fff,  #eee);

	font-size: 11px;
	padding: 1px 1px;
}
select:hover, select:focus {
	background: #dfdfdf;
	background: linear-gradient(to bottom,  #fbfbfb,  #ddd);
	border-color: #606060;
}
.select2-container .select2-choice:hover {
	border-color: #606060;
}

a {
    color: #0073aa;
}
a:visited {
    color: #8000aa;
}

/*********************************************************
 * Calculator
 *********************************************************/

/* general page styling */
html, body {
    font-size: 10pt;
    min-width: 100em;
}
.wrapper {
    padding: 0 1em;
    max-width: 1300px;
    margin: 0 auto;
}
.credits {
    clear: both;
    padding: 20px;
    max-width: 1285px;
    margin: 0px auto;
}
div.wrapper > div > span {
    padding-right: 5px;
}
fieldset {
    float: left;
    background-color: #F1F4F9;
    border: 1px solid #AAAAAA;
}
legend {
    font-weight: bold;
    text-align: center;
}
th, td {
    padding: 0;
}
th {
    font-size: 0.8em;
}
.title-text {
    font-weight: bold;
    font-size: 1.5em;
    margin: 0.5em 1em 0.5em 0;
    position: relative;
    top: -5px;
}
.main-title-text {
    top: -10px;
}
.big-text {
    text-align: left;
    font-weight: bold;
    font-size: 1.1em;
    margin: 0.5em 0;
    position: relative;
}
.big-text #mainResult:hover {  /* indicates the presence of click-to-copy function */
    cursor: pointer;
    opacity: 0.7;
}
#tooltipText {
    position: absolute;
    left: 42%;
    top: -170%;
    font-size: 0.8em;
    visibility: hidden;
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.7);
    color: white;
    text-align: center;
    padding: 5px;
    font-weight: normal;
}
#tooltipText::after {
    position: absolute;
    left: 45%;
    top: 100%;
    content: '';
    border: 6px solid transparent;
    border-top-color: rgba(0, 0, 0, 0.7);
}
.small-text {
    font-size: 0.8em;
}
.panel {
    float: left;
    display: inline-block; /* required for honkaculate to work */
}
.poke-info {
    width: 32em;
}
.field-info, .poke-import {
    text-align: center;
    width: 27.5em;
}

#holder-2 tr {
    white-space: nowrap;
}

/* general button styling */
.btn {
    text-align: center;
    padding: 4px 4px;
    position: relative;
    margin: -1px -3px 0;
    display: inline-block;
    width: 5em;
    border-radius: 8px;
}
.btn-wide {
    width: 7em;
}
.btn-xwide {
    width: 8em;
}
.btn-xxwide {
    width: 9em;
}
.btn-xxxwide {
    width: 10em;
}
.btn-small {
    width: 4em;
}
.btn-xsmall {
    width: 1em;
}
.btn-left {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}
.btn-right {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}
.btn-top {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}
.btn-bottom {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}
.btn-mid {
    border-radius: 0;
}
.btn:hover {
    z-index: 10;
}
.visually-hidden:checked + .btn {
    font-weight: bold;
}

.visually-hidden:focus-visible + .btn { /* Add visual indication when focusing on visually hidden elements */
    outline: 2px solid #2266AA;
}

/* Hide element visually, but not from screen readers. See http://adrianroselli.com/2017/05/under-engineered-custom-radio-buttons-and-checkboxen.html */
.visually-hidden {
    clip: rect(1px, 1px, 1px, 1px);
    height: 1px;
    overflow: hidden;
    position: absolute;
    top: auto;
    white-space: nowrap; /* https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe */
}

.visually-hidden:disabled + .btn {
    color: #999999;
}
.btn-group {
    display: inline-block;
    width: 100%;
}
.left {
    float: left;
}
.right {
    float: right;
}
.locked-move:checked + .btn,
.locked-move:checked + .btn:hover {
    background: #ffff99;
}

.locked-weather:checked + .btn,
.locked-weather:checked + .btn:hover {
    background: #ffff99;
}

.genSelection, .notationSelection, .modeSelection, .sourceSelection {
    display: inline-block;
    position: relative;
    top: -8px;
}
.sourceSelection {
    margin-left: 0.75em;
}
.sourceSelection .sourceLabel {
    font-weight: bold;
    margin-right: 0.35em;
}

/* header */
.move-result-group {
    display: flex;
    min-width: 50rem;
    margin-top: 1em;
}
.move-result-subgroup {
    float: left;
    width: 50%;
}
.move-result-group .btn {
    margin-right: 1em;
}
.main-result-group {
    margin: 0.5em 0 1em;
}
.result-move-header {
    font-size: 0.8em;
    font-weight: bold;
    margin: 0 0 5px;
}

/* pokemon info */
.poke-info label {
    display: inline-block;
    width: 6em;
}
/* ... */

